[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/background/4.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/ui.sprites/BirdSelectScreen.tres" type="Texture" id=2]
[ext_resource path="res://assets/ui/ui.sprites/RightArrow.tres" type="Texture" id=3]
[ext_resource path="res://assets/ui/ui.sprites/Continue.tres" type="Texture" id=4]
[ext_resource path="res://assets/ui/ui.sprites/EmptyBtn2.tres" type="Texture" id=5]
[ext_resource path="res://assets/ui/ui.sprites/LeftArrow.tres" type="Texture" id=6]
[ext_resource path="res://assets/ui/ui.sprites/title_of_bird_select.tres" type="Texture" id=7]
[ext_resource path="res://scenes/select/Select.gd" type="Script" id=8]
[ext_resource path="res://assets/bird/01/bird.sprites/Bird01_00.tres" type="Texture" id=9]
[ext_resource path="res://assets/ui/ui.sprites/EmptyBtn3.tres" type="Texture" id=10]
[ext_resource path="res://scenes/select/Characters.gd" type="Script" id=11]
[ext_resource path="res://assets/bird/08/bird.sprites/Bird8_00.tres" type="Texture" id=12]
[ext_resource path="res://assets/bird/07/bird.sprites/Bird7_00.tres" type="Texture" id=13]
[ext_resource path="res://assets/bird/04/bird.sprites/Bird4_00.tres" type="Texture" id=14]
[ext_resource path="res://assets/bird/05/bird.sprites/Bird5_00.tres" type="Texture" id=15]
[ext_resource path="res://assets/bird/06/bird.sprites/Bird6_00.tres" type="Texture" id=16]
[ext_resource path="res://assets/bird/02/bird.sprites/Bird2_00.tres" type="Texture" id=17]
[ext_resource path="res://assets/bird/03/bird.sprites/Bird3_00.tres" type="Texture" id=18]
[ext_resource path="res://assets/bird/09/bird.sprites/Bird9_00.tres" type="Texture" id=19]
[ext_resource path="res://scenes/common/BaseButton.tscn" type="PackedScene" id=20]

[node name="Select" type="Node2D"]
script = ExtResource( 8 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 200, 357.5 )
texture = ExtResource( 1 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 200, 319 )
texture = ExtResource( 2 )

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 152.0
margin_right = 371.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pre" type="CenterContainer" parent="Menu"]
margin_right = 58.0
margin_bottom = 348.0

[node name="PreBtn" parent="Menu/Pre" instance=ExtResource( 20 )]
margin_top = 145.0
margin_right = 58.0
margin_bottom = 203.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )

[node name="Center" type="CenterContainer" parent="Menu"]
margin_left = 62.0
margin_right = 278.0
margin_bottom = 348.0

[node name="Characters" type="Control" parent="Menu/Center"]
margin_top = 74.0
margin_right = 216.0
margin_bottom = 274.0
rect_min_size = Vector2( 216, 200 )
rect_clip_content = true
script = ExtResource( 11 )

[node name="GridBox" type="HBoxContainer" parent="Menu/Center/Characters"]
margin_right = 1316.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_right = 216.0
margin_bottom = 150.0
texture = ExtResource( 9 )

[node name="TextureRect2" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 220.0
margin_right = 436.0
margin_bottom = 150.0
texture = ExtResource( 17 )

[node name="TextureRect3" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 440.0
margin_right = 656.0
margin_bottom = 150.0
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 660.0
margin_right = 876.0
margin_bottom = 150.0
texture = ExtResource( 14 )

[node name="TextureRect5" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 880.0
margin_right = 1096.0
margin_bottom = 150.0
texture = ExtResource( 15 )

[node name="TextureRect6" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 1100.0
margin_right = 1316.0
margin_bottom = 150.0
texture = ExtResource( 16 )

[node name="TextureRect7" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 1320.0
margin_right = 1536.0
margin_bottom = 150.0
texture = ExtResource( 13 )

[node name="TextureRect8" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 1540.0
margin_right = 1756.0
margin_bottom = 150.0
texture = ExtResource( 12 )

[node name="TextureRect9" type="TextureRect" parent="Menu/Center/Characters/GridBox"]
margin_left = 1760.0
margin_right = 1976.0
margin_bottom = 150.0
texture = ExtResource( 19 )

[node name="Next" type="CenterContainer" parent="Menu"]
margin_left = 282.0
margin_right = 340.0
margin_bottom = 348.0

[node name="NextBtn" parent="Menu/Next" instance=ExtResource( 20 )]
margin_top = 145.0
margin_right = 58.0
margin_bottom = 203.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 10 )

[node name="Tween" type="Tween" parent="Menu"]

[node name="Title" type="Sprite" parent="."]
position = Vector2( 200, 102 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="ApplyBtn" parent="." instance=ExtResource( 20 )]
margin_left = 166.0
margin_top = 546.0
margin_right = 262.0
margin_bottom = 641.0
rect_scale = Vector2( 0.802709, 0.8 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[connection signal="pressed" from="Menu/Pre/PreBtn" to="." method="_on_PreBtn_pressed"]
[connection signal="pressed" from="Menu/Next/NextBtn" to="." method="_on_NextBtn_pressed"]
[connection signal="tween_completed" from="Menu/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="ApplyBtn" to="." method="_on_ApplyBtn_pressed"]
